exports[`test Circle renders correctly 1`] = `
<div
  className="circle-picker"
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "marginBottom": -14,
      "marginRight": -14,
      "width": "252px",
    }
  }>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #f44336",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #f44336",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #f44336",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #f44336",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #f44336",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#f44336" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #e91e63",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #e91e63",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #e91e63",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #e91e63",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #e91e63",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#e91e63" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #9c27b0",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #9c27b0",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #9c27b0",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #9c27b0",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #9c27b0",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#9c27b0" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #673ab7",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #673ab7",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #673ab7",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #673ab7",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #673ab7",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#673ab7" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #3f51b5",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #3f51b5",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #3f51b5",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #3f51b5",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #3f51b5",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#3f51b5" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #2196f3",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #2196f3",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #2196f3",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #2196f3",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #2196f3",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#2196f3" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #03a9f4",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #03a9f4",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #03a9f4",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #03a9f4",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #03a9f4",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#03a9f4" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #00bcd4",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #00bcd4",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #00bcd4",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #00bcd4",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #00bcd4",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#00bcd4" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #009688",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #009688",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #009688",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #009688",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #009688",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#009688" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #4caf50",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #4caf50",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #4caf50",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #4caf50",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #4caf50",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4caf50" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #8bc34a",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #8bc34a",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #8bc34a",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #8bc34a",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #8bc34a",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#8bc34a" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #cddc39",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #cddc39",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #cddc39",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #cddc39",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #cddc39",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#cddc39" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #ffeb3b",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #ffeb3b",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #ffeb3b",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #ffeb3b",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #ffeb3b",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ffeb3b" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #ffc107",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #ffc107",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #ffc107",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #ffc107",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #ffc107",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ffc107" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #ff9800",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #ff9800",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #ff9800",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #ff9800",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #ff9800",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ff9800" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #ff5722",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #ff5722",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #ff5722",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #ff5722",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #ff5722",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ff5722" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #795548",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #795548",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #795548",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #795548",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #795548",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#795548" />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }>
      <span
        onBlur={[Function]}
        onFocus={[Function]}>
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 14px #607d8b",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 14px #607d8b",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 14px #607d8b",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 14px #607d8b",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 14px #607d8b",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#607d8b" />
      </span>
    </div>
  </span>
</div>
`;

exports[`test CircleSwatch renders correctly 1`] = `
<span
  onMouseOut={[Function]}
  onMouseOver={[Function]}>
  <div
    style={
      Object {
        "MozTransform": "scale(1)",
        "MozTransition": "100ms transform ease",
        "OTransform": "scale(1)",
        "OTransition": "100ms transform ease",
        "WebkitTransform": "scale(1)",
        "WebkitTransition": "100ms transform ease",
        "height": 28,
        "marginBottom": 14,
        "marginRight": 14,
        "msTransform": "scale(1)",
        "msTransition": "100ms transform ease",
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 28,
      }
    }>
    <span
      onBlur={[Function]}
      onFocus={[Function]}>
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "MozBorderRadius": "50%",
            "MozBoxShadow": "inset 0 0 0 14px undefined",
            "MozTransition": "100ms box-shadow ease",
            "OBorderRadius": "50%",
            "OBoxShadow": "inset 0 0 0 14px undefined",
            "OTransition": "100ms box-shadow ease",
            "WebkitBorderRadius": "50%",
            "WebkitBoxShadow": "inset 0 0 0 14px undefined",
            "WebkitTransition": "100ms box-shadow ease",
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 14px undefined",
            "cursor": "pointer",
            "height": "100%",
            "msBorderRadius": "50%",
            "msBoxShadow": "inset 0 0 0 14px undefined",
            "msTransition": "100ms box-shadow ease",
            "outline": "none",
            "position": "relative",
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
        title={undefined} />
    </span>
  </div>
</span>
`;

exports[`test CircleSwatch renders with sizing and spacing 1`] = `
<span
  onMouseOut={[Function]}
  onMouseOver={[Function]}>
  <div
    style={
      Object {
        "MozTransform": "scale(1)",
        "MozTransition": "100ms transform ease",
        "OTransform": "scale(1)",
        "OTransition": "100ms transform ease",
        "WebkitTransform": "scale(1)",
        "WebkitTransition": "100ms transform ease",
        "height": 40,
        "marginBottom": 40,
        "marginRight": 40,
        "msTransform": "scale(1)",
        "msTransition": "100ms transform ease",
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 40,
      }
    }>
    <span
      onBlur={[Function]}
      onFocus={[Function]}>
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "MozBorderRadius": "50%",
            "MozBoxShadow": "inset 0 0 0 20px undefined",
            "MozTransition": "100ms box-shadow ease",
            "OBorderRadius": "50%",
            "OBoxShadow": "inset 0 0 0 20px undefined",
            "OTransition": "100ms box-shadow ease",
            "WebkitBorderRadius": "50%",
            "WebkitBoxShadow": "inset 0 0 0 20px undefined",
            "WebkitTransition": "100ms box-shadow ease",
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 20px undefined",
            "cursor": "pointer",
            "height": "100%",
            "msBorderRadius": "50%",
            "msBoxShadow": "inset 0 0 0 20px undefined",
            "msTransition": "100ms box-shadow ease",
            "outline": "none",
            "position": "relative",
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
        title={undefined} />
    </span>
  </div>
</span>
`;
